<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/equationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/displayView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699"
        tools:text="Entered equation" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBTN"
                style="@style/calcBtn"
                android:background="@drawable/clear_btn"
                android:onClick="clearBTN"
                android:text="@string/clear" />

            <Button
                android:id="@+id/openParenthesesBTN"
                style="@style/calcBtn"
                android:onClick="openParenthesesBTN"
                android:text="@string/openParentheses" />

            <Button
                android:id="@+id/closedParenthesesBTN"
                style="@style/calcBtn"
                android:onClick="closedParenthesesBTN"
                android:text="@string/closedParentheses" />

            <Button
                android:id="@+id/divideBTN"
                style="@style/calcBtn"
                android:background="@drawable/operator_btn"
                android:onClick="divideBTN"
                android:text="@string/divide" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/calcBtn"
                android:onClick="sevenBTN"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/calcBtn"
                android:onClick="eightBTN"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nineBTN"
                style="@style/calcBtn"
                android:onClick="nineBTN"
                android:text="@string/nine" />

            <Button
                android:id="@+id/multiplyBTN"
                style="@style/calcBtn"
                android:background="@drawable/operator_btn"
                android:onClick="multiplyBTN"
                android:text="@string/multiply" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="@style/calcBtn"
                android:onClick="fourBTN"
                android:text="@string/four" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/calcBtn"
                android:onClick="fiveBTN"
                android:text="@string/five" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/calcBtn"
                android:onClick="sixBTN"
                android:text="@string/six" />

            <Button
                android:id="@+id/subtractBTN"
                style="@style/calcBtn"
                android:background="@drawable/operator_btn"
                android:onClick="subtractBTN"
                android:text="@string/subtract" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/calcBtn"
                android:onClick="oneBTN"
                android:text="@string/one" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/calcBtn"
                android:onClick="twoBTN"
                android:text="@string/two" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/calcBtn"
                android:onClick="threeBTN"
                android:text="@string/three" />

            <Button
                android:id="@+id/addBTN"
                style="@style/calcBtn"
                android:background="@drawable/operator_btn"
                android:onClick="addBTN"
                android:text="@string/add" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zeroBTN"
                style="@style/calcBtn"
                android:layout_width="103dp"
                android:onClick="zeroBTN"
                android:text="@string/zero" />

            <Button
                android:id="@+id/pointBTN"
                style="@style/calcBtn"
                android:onClick="pointBTN"
                android:text="@string/point" />

            <Button
                android:id="@+id/equalsBTN"
                style="@style/calcBtn"
                android:background="@drawable/equals_btn"
                android:onClick="equalsBTN"
                android:text="@string/equals" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/displayView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:ems="10"
        android:hint="@string/display"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textColorHint="@color/greyAccent"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        style="@style/calcBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="258dp"
        android:contentDescription="@string/backspace"
        android:onClick="backspaceBTN"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backspace_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>